src/objects/DDS_FormulaPredictor__mdt.object
<CustomObject>
    <description>Coefficients associated with each predictor involved in the specific formula of the regression model by type of sale.</description>
    <fields>
        <fullName>Coefficient__c</fullName>
        <description>Coefficient value.</description>
        <inlineHelpText>Coefficient value.</inlineHelpText>
        <label>Coefficient</label>
        <precision>18</precision>
        <required>true</required>
        <scale>16</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsForTesting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is for testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PredictorName__c</fullName>
        <description>Name of the predictor involved in the formula.</description>
        <inlineHelpText>Name of the predictor involved in the formula.</inlineHelpText>
        <label>Predictor Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst_Hours</fullName>
                    <default>true</default>
                    <label>Analyst_Hours</label>
                </value>
                <value>
                    <fullName>Customer_Tenure</fullName>
                </value>
                <value>
                    <fullName>Log_AUM</fullName>
                </value>
                <value>
                    <fullName>Log_Users</fullName>
                </value>
                <value>
                    <fullName>Segment</fullName>
                </value>
                <value>
                    <fullName>SKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PredictorValue__c</fullName>
        <description>Value of predictor according to regression model that applies.</description>
        <inlineHelpText>Value of predictor according to regression model that applies.</inlineHelpText>
        <label>Predictor Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AdvisorsOthers</fullName>
                    <label>Advisors &amp; Others</label>
                </value>
                <value>
                    <fullName>Brokers</fullName>
                </value>
                <value>
                    <fullName>EU_Combo</fullName>
                    <label>EU Combo</label>
                </value>
                <value>
                    <fullName>EU_Market</fullName>
                    <label>EU Market</label>
                </value>
                <value>
                    <fullName>EU_Reit</fullName>
                    <label>EU Reit</label>
                </value>
                <value>
                    <fullName>FullPlatform</fullName>
                    <label>Full Platform</label>
                </value>
                <value>
                    <fullName>MarketCombo</fullName>
                    <label>Market Combo</label>
                </value>
                <value>
                    <fullName>News1</fullName>
                    <label>News 1</label>
                </value>
                <value>
                    <fullName>News2</fullName>
                    <label>News 2</label>
                </value>
                <value>
                    <fullName>News3</fullName>
                    <label>News 3</label>
                </value>
                <value>
                    <fullName>PERE_Companies</fullName>
                    <label>PE/RE Companies</label>
                </value>
                <value>
                    <fullName>PensionsEndowmentsInsuranceCompanies</fullName>
                    <label>Pensions, Endowments, Insurance Companies</label>
                </value>
                <value>
                    <fullName>PublicEquityInvestors</fullName>
                    <label>Public Equity Investors</label>
                </value>
                <value>
                    <fullName>ReactOnly</fullName>
                    <label>React Only</label>
                </value>
                <value>
                    <fullName>REIT_Combo</fullName>
                    <label>REIT Combo</label>
                </value>
                <value>
                    <fullName>US_Combo</fullName>
                    <label>US Combo</label>
                </value>
                <value>
                    <fullName>US_Market</fullName>
                    <label>US Market</label>
                </value>
                <value>
                    <fullName>US_PortfolioTools</fullName>
                    <label>US Portfolio Tools</label>
                </value>
                <value>
                    <fullName>US_Reit</fullName>
                    <label>US Reit</label>
                </value>
                <value>
                    <fullName>React</fullName>
                </value>
                <value>
                    <fullName>InvestmentBanks</fullName>
                    <label>Investment Banks</label>
                </value>
                <value>
                    <fullName>CommercialBanks</fullName>
                    <label>Commercial Banks</label>
                </value>
                <value>
                    <fullName>Detailed_NAV</fullName>
                    <label>Detailed NAV</label>
                </value>
                <value>
                    <fullName>REIT_Detailed_NAV</fullName>
                    <label>REIT + Detailed NAV</label>
                </value>
                <value>
                    <fullName>Combo_Detailed_NAV</fullName>
                    <label>Combo +  Detailed NAV</label>
                </value>
                <value>
                    <fullName>REIT_Combo_Detailed_NAV</fullName>
                    <label>REIT Combo +  Detailed NAV</label>
                </value>
                <value>
                    <fullName>Market + Detailed NAV</fullName>
                </value>
                <value>
                    <fullName>Data_Delivery</fullName>
                    <label>Data Delivery</label>
                </value>
                <value>
                    <fullName>REIT_Data_Delivery</fullName>
                    <label>REIT + Data Delivery</label>
                </value>
                <value>
                    <fullName>REIT_Combo_Data_Delivery</fullName>
                    <label>REIT Combo + Data Delivery</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesType__c</fullName>
        <description>Type of model applied by each coefficient.</description>
        <inlineHelpText>Type of model applied by each coefficient.</inlineHelpText>
        <label>Sales Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WithAUM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Need to check for coefficients that apply to renovations that include AUM.</description>
        <inlineHelpText>Need to check for coefficients that apply to renovations that include AUM.</inlineHelpText>
        <label>With AUM</label>
        <type>Checkbox</type>
    </fields>
    <label>DDS - Formula Predictor</label>
    <listViews>
        <fullName>New_Model</fullName>
        <columns>MasterLabel</columns>
        <columns>PredictorName__c</columns>
        <columns>PredictorValue__c</columns>
        <columns>Coefficient__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsForTesting__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SalesType__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Model</label>
    </listViews>
    <listViews>
        <fullName>RenewalWithoutAUM</fullName>
        <columns>PredictorName__c</columns>
        <columns>MasterLabel</columns>
        <columns>PredictorValue__c</columns>
        <columns>Coefficient__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SalesType__c</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </filters>
        <filters>
            <field>WithAUM__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>IsForTesting__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Renewal Without AUM</label>
    </listViews>
    <listViews>
        <fullName>Renewal_With_AUM</fullName>
        <columns>PredictorName__c</columns>
        <columns>MasterLabel</columns>
        <columns>PredictorValue__c</columns>
        <columns>Coefficient__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsForTesting__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SalesType__c</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </filters>
        <filters>
            <field>WithAUM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Renewal With AUM</label>
    </listViews>
    <pluralLabel>DDS - Formula Predictors</pluralLabel>
    <validationRules>
        <fullName>PredictorValueMandatory</fullName>
        <active>true</active>
        <description>If the name of the predictor is SKU or Segment it must have a predictor value.</description>
        <errorConditionFormula>AND(
OR(
 ISPICKVAL(PredictorName__c , &quot;SKU&quot;),
 ISPICKVAL(PredictorName__c , &quot;Segment&quot;) 
),
ISBLANK(TEXT(PredictorValue__c) ) 
)</errorConditionFormula>
        <errorMessage>If the name of the predictor is SKU or Segment it must have a predictor value.</errorMessage>
    </validationRules>
</CustomObject>